@@ -1,9 +1,7 @@
 - create good functions for parsing/validating IP addresses
-- code _get_xml for modem
 - make it save correctly modem info in debian
 - check that it's handling correctly the wvdial modem connections
 - implement enable_iface_with_config for PPP devices
-- reimplement command line options
 - complete the locations stuff
 - update user docs
 - drink some beer
