@@ -232,6 +232,36 @@ ifaces_model_add_interface_from_node (xmlNodePtr node)
     }
 }
 
+GstIface*
+ifaces_model_get_iface_by_name (const gchar *dev)
+{
+  GtkTreeModel *model;
+  GtkTreeIter   iter;
+  gboolean      valid;
+  gchar        *iter_dev;
+  GstIface     *iface = NULL;
+
+  g_return_val_if_fail (dev != NULL, NULL);
+
+  model = GST_NETWORK_TOOL (tool)->interfaces_model;
+  valid = gtk_tree_model_get_iter_first (model, &iter);
+
+  while (valid)
+    {
+      gtk_tree_model_get (model, &iter, COL_DEV, &iter_dev, -1);
+
+      if (strcmp (iter_dev, dev) == 0)
+        {
+          gtk_tree_model_get (model, &iter, COL_OBJECT, &iface, -1);
+          valid = FALSE;
+        }
+      else
+        valid = gtk_tree_model_iter_next (model, &iter);
+    }
+
+  return iface;
+}
+
 static void
 update_gateways_combo (void)
 {
